--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "bootstrap": "^5.1.3",
     "luxon": "^2.3.2",
     "luxon-angular": "^5.0.0",
